// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/account-notifications.tsx should render itself (github.com with notifications) 1`] = `
<div
  className="flex flex-1 items-center justify-between py-2 px-4 bg-gray-300 dark:bg-gray-darkest dark:text-white text-sm"
>
  github.com
  <svg
    aria-hidden="true"
    className="octicon"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<path fill-rule=\\"evenodd\\" d=\\"M12.78 6.22a.75.75 0 010 1.06l-4.25 4.25a.75.75 0 01-1.06 0L3.22 7.28a.75.75 0 011.06-1.06L8 9.94l3.72-3.72a.75.75 0 011.06 0z\\"></path>",
      }
    }
    fill="currentColor"
    height={20}
    role="img"
    style={
      Object {
        "display": "inline-block",
        "userSelect": "none",
        "verticalAlign": "text-bottom",
      }
    }
    viewBox="0 0 16 16"
    width={20}
  />
</div>
`;

exports[`components/account-notifications.tsx should render itself (github.com without notifications) 1`] = `
<div
  className="flex flex-1 items-center justify-between py-2 px-4 bg-gray-300 dark:bg-gray-darkest dark:text-white text-sm"
>
  github.com
  <svg
    aria-hidden="true"
    className="octicon"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<path fill-rule=\\"evenodd\\" d=\\"M9.78 12.78a.75.75 0 01-1.06 0L4.47 8.53a.75.75 0 010-1.06l4.25-4.25a.75.75 0 011.06 1.06L6.06 8l3.72 3.72a.75.75 0 010 1.06z\\"></path>",
      }
    }
    fill="currentColor"
    height={20}
    role="img"
    style={
      Object {
        "display": "inline-block",
        "userSelect": "none",
        "verticalAlign": "text-bottom",
      }
    }
    viewBox="0 0 16 16"
    width={20}
  />
</div>
`;
